--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,15 @@
 /**app.wxss**/
+navigationBar{
+  display: block;
+ 
+}
 .container {
-  height: 100%;
+  height: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding: 200rpx 0;
+  background-color:red;
   box-sizing: border-box;
 } 
