--- a/app.wxss
+++ b/app.wxss
@@ -4,12 +4,9 @@ navigationBar{
  
 }
 .container {
-  height: 80%;
+  height: 1500rpx;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
   background-color:red;
   box-sizing: border-box;
 } 
