20190317-scroll微信原声使用
获取设备信息，响应式开发

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,14 +1,16 @@
 <navigationBar text='{{text}}'></navigationBar>
 <!--index.wxml-->
-<view class="container">
-  <scroll>
-    <view>
-    <input placeholder='搜索'></input>
-      <view class="orderList">
-        <view wx:for="{{array}}" wx:for-index="idx" wx:for-item="itemName">
-          <view>{{itemName.text}}</view>
+<containter>
+  <view>
+    <scroll>
+      <view>
+        <input placeholder='搜索'></input>
+        <view class="orderList">
+          <view wx:for="{{array}}" wx:for-index="idx" wx:for-item="itemName">
+            <view>{{itemName.text}}</view>
+          </view>
         </view>
       </view>
-    </view>
-  </scroll>
-</view>
+    </scroll>
+  </view>
+</containter>
