--- a/components/navigationBar/navigayionBar.wxml
+++ b/components/navigationBar/navigayionBar.wxml
@@ -1,4 +1,4 @@
 <!--pages/navigationBar/navigayionBar.wxml-->
-<view class="container" style="height:{{height}}px">
+<view class="container" style="height:{{height}};">
 <text class="navText">{{text}}</text>
 </view>
