--- a/components/scroll/scroll.wxml
+++ b/components/scroll/scroll.wxml
@@ -1,3 +1,3 @@
-<scroll-view scroll-y style="height: 1500rpx;width:100%;" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
+<scroll-view scroll-y style="height: {{height}};width:100%;" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
   <slot></slot>
 </scroll-view>
