--- a/components/containter/containter.wxss
+++ b/components/containter/containter.wxss
@@ -2,6 +2,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  background-color:red;
+  background-color:#fff;
   box-sizing: border-box;
 } 
