--- a/app.wxss
+++ b/app.wxss
@@ -1,5 +1,36 @@
 /**app.wxss**/
-navigationBar{
+
+navigationBar {
   display: block;
+}
+
+.shareServersImgContainter {
+  display: flex;
+  flex-direction:row; 
+  flex-wrap: wrap;
  
+}
+.shareServersImgItem{
+  width:20%;
+  text-align: center;
+  position: relative;
+  top:0;
+  right:0;
+  bottom: 0;
+  left: 0;
+  padding:5rpx 0 5rpx; 
+  
+}
+.shareServersImgItem::after{
+  content: "";
+  display:inline-block;
+  vertical-align: middle;
+  height:100%;
+   
+}
+.shareServersImgContainter-image {
+  display: inline-block;
+  vertical-align: middle;
+  height: 50px;
+  width: 50px;
 }
