20190319-自定义导航栏
自定义导航栏，需要适配太多东西，暂时拉一个分支，以后维护

--- a/components/swiper/swiper.wxml
+++ b/components/swiper/swiper.wxml
@@ -4,7 +4,7 @@
   interval="{{interval}}"
   duration="{{duration}}"
 >
-  <block wx:for="{{imgUrls}}" wx:for-index="idx" wx:for-item="itemName">
+  <block wx:for="{{imgUrls}}" wx:for-index="idx" wx:for-item="itemName" wx:key="{{idx}}">
     <swiper-item>
       <image src="{{itemName}}" class="slide-image"/>
     </swiper-item>
